SERVER-24850 Make balancer skip namespaces which get dropped during analyis